--- a/nodarbibas-css.css
+++ b/nodarbibas-css.css
@@ -7,6 +7,7 @@
   max-width: 100%;
   margin: auto;
   line-height: 1.5;
+  text-transform: capitalize;
 }
 
 /* Desktop: keep all days in a single horizontal scroll row */
@@ -110,6 +111,7 @@
 .nodarbiba--pasniedzejs {
   font-size: 0.9rem;
   color: #6b7280;
+  text-align: left;
 }
 
 .nodarbiba--laiks {
